--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
-<h1> Foi implementado, Sim! </h1>
+<h1> Site em desenvolvimento! </h1>
+  <h2> Enquanto isso siga nosso Instagram </2>
+  <a href="https://www.instagram.com/casaameoficial/">@Casaameoficial</a>
 </body>
 </html
