--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <link rel="icon" href="casaameicon.jpeg">
   </head>
 <body>
-<h1> Site em desenvolvimento! </h1>
-  <h2> Enquanto isso siga nosso Instagram </2>
-  <a href="https://www.instagram.com/casaameoficial/">@Casaameoficial</a>
+  <div>
+      <h1> Site em desenvolvimento! </h1>
+        <h2> Enquanto isso siga nosso Instagram </2>
+        <a href="https://www.instagram.com/casaameoficial/">@Casaameoficial</a>
+  </div>
 </body>
 </html
