--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
   </head>
 <body>
   <div>
+    <div style = "position: absolute; left: 50%; margin-right: -45%; transform: translate(-45%, -50%);  width: 600px; padding: 2em; ">
+    <div style = "position: inherit; width: 600px; font-family:Arial, Helvetica, sans-serif; font-size: 13px;">
+
       <h1> Site em desenvolvimento! </h1>
         <h2> Enquanto isso siga nosso Instagram </2>
         <a href="https://www.instagram.com/casaameoficial/">@Casaameoficial</a>
+      </div>
+    </div>
   </div>
 </body>
 </html
