--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 
     <title>Casa Ame</title>
-    <link rel="icon" href="imagens/casaameicon.png">
+    <link rel="icon" href="casaameicon.png">
   </head>
   <body>
 
