--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <![endif]-->
 
     <!-- Estilo customizado -->
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo.css">
 
     <title>Casa Ame</title>
     <link rel="icon" href="casaameicon.png">
