--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           <div class="col-md-12 capa">
             
             <h1>Site em desenvolvimento</h1>
+            <meta name="descripton" content="Casa Espírita em Balneario Camboriú. Venha conhecer a cura pela fé. ">
             <a href="https://www.instagram.com/casaameoficial/" class="btn btn-lg btn-custom btn-rosa">
               Siga nosso Instagram
                 </a>
