--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <![endif]-->
 
     <!-- Estilo customizado -->
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
 
     <title>Casa Ame</title>
-    <link rel="icon" href="casaameicon.png">
+    <link rel="icon" href="imagens/casaameicon.png">
   </head>
   <body>
 
@@ -30,7 +30,7 @@
         
         <div class="container">
           <a href="index.html" class="navbar-brand">
-            <img src="casaameicon.png" width="100">
+            <img src="imagens/casaameicon.png" width="100">
           </a>
           
           <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-principal">
@@ -87,7 +87,7 @@
 
           <div class="col-md-12 capa">
             <a href="https://www.instagram.com/casaameoficial/">
-              <img src="instagram-logo.png" class="rsocial">
+              <img src="imagens/instagram-logo.png" class="rsocial">
 <!--            <a href="" class="btn btn-lg btn-custom btn-rosa">
               Adote uma familia
             </a> -->
@@ -102,7 +102,7 @@
 
           <div class="col-md-12 capa">
             <a href="https://chat.whatsapp.com/FO29aPgmIt4AgkgJh51vtI">
-              <img src="Ws.png" class="rsocial">
+              <img src="imagens/Ws.png" class="rsocial">
 <!--            <a href="" class="btn btn-lg btn-custom btn-rosa">
               Adote uma familia
             </a> -->
@@ -131,7 +131,7 @@
 
     <footer style="clear: both">
       <a href="https://api.whatsapp.com/send?phone=5547996903513">Contato    (47) 9 9690-3513
-      <img src="miniwhats.png"></a>
+      <img src="imagens/miniwhats.png"></a>
     </footer>
 
 
