--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <br><br>
 
-    <section id="home" class="d-flex" style="margin-bottom: -80px;">
+    <section id="home" class="d-flex">
       <div class="container align-self-center">
         <div class="row">
           <div class="col-md-12 capa">
