--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <div class="container">
           <a href="index.html" class="navbar-brand">
-            <img src="casaameicon.png" width="100">
+            <img src="imagens/casaameicon.png" width="100">
           </a>
           
           <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-principal">
@@ -73,7 +73,7 @@
 
     <br><br>
 
-    <section id="home" class="d-flex">
+    <section id="home" class="d-flex" style="margin-bottom: -80px;">
       <div class="container align-self-center">
         <div class="row">
           <div class="col-md-12 capa">
