--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <div class="container">
           <a href="index.html" class="navbar-brand">
-            <img src="imagens/casaameicon.png" width="100">
+            <img src="casaameicon.png" width="100">
           </a>
           
           <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-principal">
