--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="container">
           <a href="index.html" class="navbar-brand">
             <img src="casaameicon.png" width="100">
+            <meta name="descripton" content="Centro Espírita em Balneario Camboriú. Venha conhecer a cura pela fé.">
           </a>
           
           <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-principal">
@@ -70,7 +71,7 @@
 
       </nav>
     </header>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br>
 
     <section id="home" class="d-flex">
       <div class="container align-self-center">
