--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <meta name="descripton" content="Centro Espírita em Balneario Camboriú. Venha conhecer a cura pela fé.">
             <h4>Rua Chapecó, 115 - Bairro Municipios</h4>
             <h4>Balneário Camboriú</h4>
-            <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14219.62562711289!2d-48.64841244266821!3d-27.001510279630807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8b505eb05a8f3%3A0xad8c01f98a6abd22!2sCasa%20Ame!5e0!3m2!1spt-BR!2sbr!4v1635205611214!5m2!1spt-BR!2sbr" width="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
+            <iframe title="Casa Ame no Google Maps" class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14219.62562711289!2d-48.64841244266821!3d-27.001510279630807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8b505eb05a8f3%3A0xad8c01f98a6abd22!2sCasa%20Ame!5e0!3m2!1spt-BR!2sbr!4v1635205611214!5m2!1spt-BR!2sbr" width="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
           </div>
 
     </section>
