--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     </section>
     <br>
-    <footer style="clear: both;">
+    <footer>
       <div style="center">
         <a style="color: #000000;" href="https://api.whatsapp.com/send?phone=554796903513">Contato  -  (47) 9 9690-3513
           <img src="miniwhats.png"></a>
