--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
         <div class="container">
           <a href="index.html" class="navbar-brand">
             <img src="casaameicon.png" width="100">
-            <meta name="descripton" content="Centro Espírita em Balneario Camboriú. Venha conhecer a cura pela fé.">
-          </a>
-          
+            <meta name="descripton" content="Casa Ame, Balneário Camboriú. Centro Espírita em Balneário Camboriú. Aqui aprendemos a nos reformar intimamente, para desenvolver em nós o amor ao próximo. Venha conhecer a cura pela fé.">
+          </a>          
           <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-principal">
             <i class="fas fa-bars text-white"></i>
           </button>
@@ -128,11 +127,6 @@
       </div>
       
     </footer>
-
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
