--- a/index.html
+++ b/index.html
@@ -3,30 +3,40 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 
 		<title>Casa Ame</title>
 		<meta name="descripton" content="Casa Ame, Balneário Camboriú. Centro Espírita em Balneário Camboriú. Aqui aprendemos a nos reformar intimamente, para desenvolver em nós o amor ao próximo. Venha conhecer a cura pela fé.">
-		<link rel="icon" href="a de matamba.png">
+		<link rel="icon" href="casaameicon.png">
 
 		<style type="text/css">
 			#grad1 {
 				background-attachment: fixed;
 				font-family: Helvetica,Arial,sans-serif;
-	  
+	  			min-width: 320px;
+	  			max-width: 800px;
 	  			background: rgb(201,224,251);
 				background: radial-gradient(circle, rgba(196,214,236,100) 0%, rgba(240,228,233,1) 100%);
+				margin: auto;
 				}
 					
+			
 			.cara {
-				padding-top: 50px;
 				text-align: center;
-				align-content: center;
+				min-width: 320px;
+	  			max-width: 600px;
+				padding-top: 30px;
+				margin: auto;
 			}
-			.cara img {
-				width: 180px;
+
+			.rsocial {
+				width: 60px;
+
 			}
+
+
 			h1 {
+				margin-top: 0;
 				text-align: center;
 				margin-bottom: 0;
 				color: #fe5fa2;
@@ -44,7 +54,7 @@
 			<div>
 				<h1 style="margin-top: 30px;">Site em Construção</h1>
 					<div class="cara">
-						<img src="./casaameicon.png" alt="Centro espírita Casa Ame, Balneário Camboriú.">
+						<img class="logo" src="./casaameicon.png" alt="Centro espírita Casa Ame, Balneário Camboriú.">
 
 					</div>
 					<div class="cara">
@@ -52,14 +62,14 @@
 							<h1>Segue nosso Instagram</h1>
 						</a>
 						<a href="https://www.instagram.com/casaameoficial/">
-				            <img style="width: 60px;" src="instagram-logo.png" alt="@Casaameoficial Instagram do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
+				            <img src="instagram-logo.png" alt="@Casaameoficial Instagram do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
 			            </a>
 			            <br><br><br>
 						<a href="https://www.instagram.com/casaameoficial/">
 							<h1>Participe do Grupo de Frequentadores</h1>
 						</a>
 						<a href="https://bit.ly/3lSZxRw">
-				            <img style="width: 60px;" src="Ws.png" alt="Grupo público de frequentadores do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
+				            <img src="Ws.png" alt="Grupo público de frequentadores do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
 			            </a>
 					
 					</div>
@@ -69,7 +79,7 @@
 			            <h1 style="margin-bottom: -0px;">Localização</h1>           
 			            <h4>Rua Chapecó, 115 - Bairro Municipios - Balneário Camboriú</h4>
 			            <meta name="descripton" content=" Localização Casa Espírita em Balneario Camboriú - Localização Centro Espírita">
-			            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13324.71337119391!2d-48.65169165374631!3d-27.003769064433946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8b505eb05a8f3%3A0xad8c01f98a6abd22!2sCasa%20Ame!5e0!3m2!1spt-BR!2sbr!4v1635177906817!5m2!1spt-BR!2sbr" style="border:2px;" allowfullscreen="" loading="lazy"></iframe>
+			            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13324.71337119391!2d-48.65169165374631!3d-27.003769064433946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8b505eb05a8f3%3A0xad8c01f98a6abd22!2sCasa%20Ame!5e0!3m2!1spt-BR!2sbr!4v1635177906817!5m2!1spt-BR!2sbr" width="100vw" style="border:2px;" allowfullscreen="" loading="lazy"></iframe>
 			         </div>
 			    </section>
 			    <div class="cara">
