--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			            <h1 style="margin-bottom: -0px;">Localização</h1>           
 			            <h4>Rua Chapecó, 115 - Bairro Municipios - Balneário Camboriú</h4>
 			            <meta name="descripton" content=" Localização Casa Espírita em Balneario Camboriú - Localização Centro Espírita">
-			            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13324.71337119391!2d-48.65169165374631!3d-27.003769064433946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8b505eb05a8f3%3A0xad8c01f98a6abd22!2sCasa%20Ame!5e0!3m2!1spt-BR!2sbr!4v1635177906817!5m2!1spt-BR!2sbr" width="100vw" style="border:2px;" allowfullscreen="" loading="lazy"></iframe>
+			            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13324.71337119391!2d-48.65169165374631!3d-27.003769064433946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8b505eb05a8f3%3A0xad8c01f98a6abd22!2sCasa%20Ame!5e0!3m2!1spt-BR!2sbr!4v1635177906817!5m2!1spt-BR!2sbr" style="border:2px;" allowfullscreen="" loading="lazy"></iframe>
 			         </div>
 			    </section>
 			    <div class="cara">
