--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
 
 		<title>Casa Ame</title>
 		<meta name="descripton" content="Casa Ame, Balneário Camboriú. Centro Espírita em Balneário Camboriú. Aqui aprendemos a nos reformar intimamente, para desenvolver em nós o amor ao próximo. Venha conhecer a cura pela fé.">
