--- a/index.html
+++ b/index.html
@@ -18,30 +18,34 @@
 	  			background: rgb(201,224,251);
 				background: radial-gradient(circle, rgba(196,214,236,100) 0%, rgba(240,228,233,1) 100%);
 				margin: auto;
-			}
+				}
+					
 			
 			.cara {
 				text-align: center;
 				min-width: 320px;
 	  			max-width: 600px;
-				padding-top: 30px;
+				padding-top: 50px;
 				margin: auto;
 			}
 
 			.rsocial {
 				width: 60px;
+
 			}
+
 
 			h1 {
 				margin-top: 0;
 				text-align: center;
 				margin-bottom: 0;
 				color: #fe5fa2;
-			}
-
+					}
 			a {
 				text-decoration: none;
+				margin-top: 15px;
 			}
+
 		</style>
 		
 	</head>
@@ -52,13 +56,14 @@
 				<h1 style="margin-top: 30px;">Site em Construção</h1>
 					<div class="cara">
 						<img class="logo" src="./casaameicon.png" alt="Centro espírita Casa Ame, Balneário Camboriú.">
+
 					</div>
 					<div class="cara">
 						<a href="https://www.instagram.com/casaameoficial/">
 							<h1>Segue nosso Instagram</h1>
 						</a>
 						<a href="https://www.instagram.com/casaameoficial/">
-			 	            <img src="instagram-logo.png" alt="@Casaameoficial Instagram do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
+				            <img src="instagram-logo.png" alt="@Casaameoficial Instagram do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
 			            </a>
 			            <br><br><br>
 						<a href="https://www.instagram.com/casaameoficial/">
