--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div>
 				<h1 style="margin-top: 30px;">Site em Construção</h1>
 					<div class="cara">
-						<img class="logo" src="./casaameicon.png" alt="Centro espírita Casa Ame, Balneário Camboriú.">
+						<img class="logo" src="casaameicon.png" alt="Centro espírita Casa Ame, Balneário Camboriú.">
 
 					</div>
 					<div class="cara">
