--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -7,7 +7,7 @@
 
 		<title>Casa Ame</title>
 		<meta name="descripton" content="Casa Ame, Balneário Camboriú. Centro Espírita em Balneário Camboriú. Aqui aprendemos a nos reformar intimamente, para desenvolver em nós o amor ao próximo. Venha conhecer a cura pela fé.">
-		<link rel="icon" href="casaameicon.png">
+		<link rel="icon" href="smallameicon80.webp">
 
 		<style type="text/css">
 			#grad1 {
@@ -55,7 +55,7 @@
 			<div>
 				<h1 style="margin-top: 30px;">Site em Construção</h1>
 					<div class="cara">
-						<img class="logo" src="casaameicon.png" alt="Centro espírita Casa Ame, Balneário Camboriú.">
+						<img class="logo" src="smallameicon120.webp" alt=" Ícone do Centro espírita Casa Ame, Balneário Camboriú.">
 
 					</div>
 					<div class="cara">
@@ -63,14 +63,14 @@
 							<h1>Segue nosso Instagram</h1>
 						</a>
 						<a href="https://www.instagram.com/casaameoficial/">
-				            <img src="instagram-logo.png" alt="@Casaameoficial Instagram do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
+				            <img src="instagram-logo.webp" alt="@Casaameoficial ícone do Instagram do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
 			            </a>
 			            <br><br><br>
 						<a href="https://www.instagram.com/casaameoficial/">
 							<h1>Participe do Grupo de Frequentadores</h1>
 						</a>
 						<a href="https://bit.ly/3lSZxRw">
-				            <img src="Ws.png" alt="Grupo público de frequentadores do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
+				            <img src="Ws.webp" alt=" ícone do Grupo público WhatsApp dos frequentadores do Centro espírita Casa Ame, Balneário Camboriú." class="rsocial">
 			            </a>
 					
 					</div>
@@ -78,15 +78,15 @@
 				<section>	
 					<div class="cara">
 			            <h1 style="margin-bottom: -0px;">Localização</h1>           
-			            <h4>Rua Chapecó, 115 - Bairro Municipios - Balneário Camboriú</h4>
+			            <p>Rua Chapecó, 115 - Bairro Municipios - Balneário Camboriú</p>
 			            <meta name="descripton" content=" Localização Casa Espírita em Balneario Camboriú - Localização Centro Espírita">
-			            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13324.71337119391!2d-48.65169165374631!3d-27.003769064433946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8b505eb05a8f3%3A0xad8c01f98a6abd22!2sCasa%20Ame!5e0!3m2!1spt-BR!2sbr!4v1635177906817!5m2!1spt-BR!2sbr" style="border:2px;" allowfullscreen="" loading="lazy"></iframe>
+			            <iframe title="Localização no Mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13324.71337119391!2d-48.65169165374631!3d-27.003769064433946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8b505eb05a8f3%3A0xad8c01f98a6abd22!2sCasa%20Ame!5e0!3m2!1spt-BR!2sbr!4v1635177906817!5m2!1spt-BR!2sbr" style="border:2px;" allowfullscreen="" loading="lazy"></iframe>
 			         </div>
 			    </section>
 			    <div class="cara">
 			    	<footer style="clear: both">
       				<a style="color: black;" href="https://api.whatsapp.com/send?phone=5547996903513">Contato    (47) 9 9690-3513
-      				<img style="width: 20px;" src="miniwhats.png"></a>
+      				<img alt="icone do whatsapp" style="width: 20px;" src="miniwhats.png"></a>
     				</footer>
 				</div>
 			</div>
