--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="descripton" content="Casa Ame, Balneário Camboriú. Centro Espírita em Balneário Camboriú. Aqui aprendemos a nos reformar intimamente, para desenvolver em nós o amor ao próximo. Venha conhecer a cura pela fé.">
         <meta name="author" content="JBaruja" />
         <title>Casa Ame</title>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="col-lg-3 " >
                         <div class="p-2 textmargin texthorario" >
-                            <h3>Segunda Feira</h3> <br>
+                            <h3 class="mb-lg-4" >Segunda Feira</h3> 
                             <h5>20 hs. </h5>
                             <h5>Palestra e passes </h5>
                         </div>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="col-lg-3 " >
                         <div class="p-2 textmargin texthorario">
-                            <h3>Quarta Feira</h3><br>
+                            <h3 class="mb-lg-4" >Quarta Feira</h3>
                             <h5>20 hs. </h5>
                             <h5>Tratamento Espiritual </h5>
                         </div>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="col-lg-3 " >
                         <div class="p-2 textmargin texthorario">
-                            <h3>Quinta Feira</h3><br>
+                            <h3 class="mb-lg-4" >Quinta Feira</h3>
                             <h5>14 a 16 hs. </h5>
                             <h5>Reiki </h5>
                         </div>
@@ -170,7 +170,7 @@
                     </div>
                     <div class="col-lg-3 " >
                         <div class="p-2 textmargin texthorario">
-                            <h3>Quinta Feira</h3><br>
+                            <h3 class="mb-lg-4" >Quinta Feira</h3>
                             <h5>20 hs. </h5>
                             <h5>Hospital Espiritual </h5>
                         </div>
@@ -203,9 +203,9 @@
                         <span><h5 class="display-6 texthorario text-center">Grupo de frequentadores</h5></span>
 
                         <div class=" text-center">
-                            <a href="https://bit.ly/3lSZxRw"><img src="img/Ws.png" class="mx-2 rsociais" alt=" Grupo frequentadores"></a>
-                            <a href="https://t.me/casaameoficial" ><img class="rounded-3 mx-2 rsociais" src="img/telegram.png"  alt=" Grupo frequentadores"></a>
-                            <p>Neles publicamos Links de encontros On-line, Psicografias, anúncios da casa. </p>
+                            <a href="https://bit.ly/3lSZxRw"><img src="img/Ws.png" class="mx-2 rsociais" alt=" Grupo WhatsApp de frequentadores"></a>
+                            <a href="https://t.me/casaameoficial" ><img class="rounded-3 mx-2 rsociais" src="img/telegram.png"  alt=" Grupo Telegram frequentadores"></a>
+                            <p>Neles publicamos Links de encontros On-line, Psicografias, e anúncios da casa. </p>
                             
                         </div>
                         
@@ -280,7 +280,7 @@
           <!--Grid row-->
           <div class="row">
             <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 text-center">
+            <div class="col-2 mx-auto mt-3 text-center">
               <!--<h6 class="text-uppercase mb-4 font-weight-bold">
                 CASA AME
               </h6> -->
@@ -369,7 +369,7 @@
             <div class="col-md-8 col-lg-12 text-center text-md-start">
               <!-- Copyright -->
               <div class="p-3 text-center">
-                Copyright © 2022 - CASA AME
+                Copyright © 2022 - CASA AME - Todos os direitos reservados
               </div>
               <!-- Copyright -->
             </div>
