--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="container px-5" id="sobrenos">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded" src="img/obras_basicas.png" alt="Obras básicas de Allan Kardec" /></div>
+                        <div class="p-5"><iframe width="560" height="315" src="https://www.youtube.com/embed/ax0fzTqYcJo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                     </div>
                     <div class="col-lg-6 order-lg-1" >
                         <div class="p-5 fs-5">
